--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -8,7 +8,7 @@
 
 		{% block css %}
 		<!-- My local Bootstrap 4 CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css"/>
 		<link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css"/>
 		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" type="text/css"/>
 		{% endblock %}
@@ -29,7 +29,7 @@
 							<a class="nav-link" href="/about/">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/blog/">News</a>
+							<a class="nav-link" href="/news/">News</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/art/">Art</span></a>
