--- a/portfolio/templates/about/page.html
+++ b/portfolio/templates/about/page.html
@@ -19,7 +19,7 @@
             {% for page in other_page %}
                 {% if page != page_detail %}
                     <div class="col-md-4  text-center">
-                        <h3><a href="/about/{{page.id}}"> {{ page.title }}</a></h3>
+                        <h3><a href="/about/{{page.slug}}"> {{ page.title }}</a></h3>
                         <p>{{ page.sub_title }}</p>
                     </div>
                 {% endif %}
