--- a/portfolio/templates/news/newsfeed.html
+++ b/portfolio/templates/news/newsfeed.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="col-md-6">
-            <p><h3><a href="{{post.id}}"> {{post.title}}</a></h3>
+            <p><h3><a href="{{post.slug}}"> {{post.title}}</a></h3>
             <h5>{{post.subtitle}}</h5></p>
             <p>By {{post.author}} on {{post.date}}</p>
         </div>
