--- a/portfolio/templates/news/article.html
+++ b/portfolio/templates/news/article.html
@@ -7,13 +7,14 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-8 offset-md-2">
-
 			<p><h1>{{ article.title }}</a></h1>
-			<p><b>By {{ article.author }} on {{ article.date }}</b></p>
-			<p><img class="img-fluid" src="{{ article.image.url }}"/></p>
-
+			<p><img class="img-fluid" src="{{ article.image.url }}"/>
+			{{ article.subtitle }}</p>
+			<p><b>
+				By {% for author in article.author.all %}{{ author.name }}{% endfor %}
+			</b></p>
+			{{ article.date }}
 			<p>{{ article.body|safe|linebreaks}}</p>
-
 		</div>
 	</div>
 </div>
