--- a/newsfeed/frontend/static/css/custom.css
+++ b/newsfeed/frontend/static/css/custom.css
@@ -15,53 +15,53 @@ code {
   font-size: 80%;
 }
 
-.navbar-portfolio .navbar-brand {
+.navbar-newsfeed .navbar-brand {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-brand:focus, .navbar-portfolio .navbar-brand:hover {
+.navbar-newsfeed .navbar-brand:focus, .navbar-newsfeed .navbar-brand:hover {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-nav .nav-link {
+.navbar-newsfeed .navbar-nav .nav-link {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-nav .nav-link:focus, .navbar-portfolio .navbar-nav .nav-link:hover {
+.navbar-newsfeed .navbar-nav .nav-link:focus, .navbar-newsfeed .navbar-nav .nav-link:hover {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-nav .nav-link.disabled {
+.navbar-newsfeed .navbar-nav .nav-link.disabled {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-nav .show > .nav-link,
-.navbar-portfolio .navbar-nav .active > .nav-link,
-.navbar-portfolio .navbar-nav .nav-link.show,
-.navbar-portfolio .navbar-nav .nav-link.active {
+.navbar-newsfeed .navbar-nav .show > .nav-link,
+.navbar-newsfeed .navbar-nav .active > .nav-link,
+.navbar-newsfeed .navbar-nav .nav-link.show,
+.navbar-newsfeed .navbar-nav .nav-link.active {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-toggler {
+.navbar-newsfeed .navbar-toggler {
   color: rgba(0, 0, 0, 1);
   border-color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio .navbar-toggler-icon {
+.navbar-newsfeed .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
-.navbar-portfolio .navbar-text {
+.navbar-newsfeed .navbar-text {
   color: rgba(0, 0, 0, 1);
 }
 
-.navbar-portfolio {
+.navbar-newsfeed {
     border-bottom: 1px solid rgb(211, 211, 211);
 }
 
 /* Custom list styling
 -------------------------------------------------- */
-.list-portfolio {
+.list-newsfeed {
   padding-left: 0;
   list-style: none;
   color: #ffffff;
@@ -79,7 +79,7 @@ code {
 
 /* Custom link styling
 -------------------------------------------------- */
-.portfolio-link {
+.newsfeed-link {
   font-weight: normal;
   padding-top: 10px;
   color: #ffffff;
