--- a/newsfeed/frontend/templates/base.html
+++ b/newsfeed/frontend/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Portfolio</title>
+		<title>Newsfeed</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content ="width=device-width, initial-scale=1.0">
 
@@ -15,9 +15,9 @@
 
 	</head>
 	<body style="background-color: #ffffff">
-		<nav class="navbar navbar-expand-lg navbar-portfolio fixed-top" style="background-color: #ffffff">
+		<nav class="navbar navbar-expand-lg navbar-newsfeed fixed-top" style="background-color: #ffffff">
 			<div class="container">
-				<a class="navbar-brand" href="/" style="#4737c4">Portfolio</a>
+				<a class="navbar-brand" href="/" style="#4737c4">newsfeed</a>
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -66,13 +66,13 @@
 			<div class="container" style="padding-top:5px">
 				<div class="row">
 					<div class="col-md-1">
-						<ul class="list-portfolio">
-							<li><a href="/privacy/" class="portfolio-link">Privacy</a></li>
+						<ul class="list-newsfeed">
+							<li><a href="/privacy/" class="newsfeed-link">Privacy</a></li>
 						</ul>
 					</div>
 					<div class="col-md-1">
-						<ul class="list-portfolio">
-							<li><a href="/terms/" class="portfolio-link">Terms</a></li>
+						<ul class="list-newsfeed">
+							<li><a href="/terms/" class="newsfeed-link">Terms</a></li>
 						</ul>
 					</div>
 				</span>
