More formatting of navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.articlePreview {
+  padding: 15px;
+}
+
+.navbarBrand {
+  border-color: rgba(0, 0, 0, 1);
+}
