--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,5 +18,9 @@ code {
 }
 
 .navbarBrand {
-  border-color: rgba(0, 0, 0, 1);
+  border-bottom: 1px solid rgb(211, 211, 211);
+}
+
+.display-article {
+  white-space: pre-line;
 }
