--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,3 +24,13 @@ code {
 .display-article {
   white-space: pre-line;
 }
+
+.footer {
+  /* position: absolute; */
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  /* height: 60px; */
+  /* line-height: 60px; Vertically center the text there */
+  background-color: #202020;
+}
