--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,16 +21,18 @@ code {
   border-bottom: 1px solid rgb(211, 211, 211);
 }
 
+.navbar-padding{
+  padding-bottom: 15px;
+}
+
 .display-article {
   white-space: pre-line;
 }
 
-.footer {
-  /* position: absolute; */
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  /* height: 60px; */
-  /* line-height: 60px; Vertically center the text there */
-  background-color: #202020;
+.latest {
+  border-bottom: 1px solid rgb(211, 211, 211);
+}
+
+.footer-container {
+  border-top: 1px solid rgb(211, 211, 211);
 }
