--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,12 @@ code {
   padding: 15px;
 }
 
+.box {
+  padding: 15px;
+  border: 1px solid #d3d3d3; 
+  border-radius: 5px;
+}
+
 .btn-item {
   padding-right: 5px;
 }
